# serverless-blog-api

./: README.md  pyproject.toml  requirements.txt  template.yaml
blog_api/: delete_post.py  list_posts.py  markdown_to_html.py  post_creation_topic.py  requirements.txt  retrieve_post.py  sanitize_markdown.py  token_authorizer.py  update_post.py  upload_image.py  validate_post.py
events/: authorizer_event.json  create_event.json  delete_event.json  list_event.json  retrieve_event.json  update_event.json
tests/: requirements.txt
tests/integration/: test_api_gateway.py
tests/unit/: test_create_post.py  test_delete_post.py  test_list_post.py  test_retrieve_post.py  test_token_authorizer.py  test_update_post.py
