[tool.poetry]
name = "serverless-blog"
version = "0.1.0"
description = ""
authors = ["Isai Ramirez <86127102+CodeSwallow@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "serverless_blog"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.105"
python-slugify = "^8.0.1"
moto = "^4.1.6"
pytest = "^7.2.2"
requests = "^2.28.2"
streaming-form-data = "^1.11.0"
pillow = "^9.5.0"
markdown = "^3.4.3"
bleach = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

